nestum/tests/ui/fail_external_not_tuple.rs
use nestum::nestum;

#[nestum]
pub enum Inner {
    A,
}

#[nestum]
pub enum Outer {
    #[nestum(external = "crate::Inner")]
    Bad,
}

fn main() {}
